[findBugs] Use Integer.valueOf instead of new Integer
Change-Id: I8b5330fb540eab61c66cc55c64f0158559e4314e
Signed-off-by: Robin Stocker <robin@nibor.org>